--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "html.suggest.angular1": false,
-  "html.suggest.ionic": false
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"html.suggest.angular1": false,
+	"html.suggest.ionic": false,
+	"files.exclude": {
+		"bin": true,
+		"obj": true,
+		"node_modules": true,
+		".chrome": true,
+		"yarn.lock": true
+	}
 }
