discord tile and applet popup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "skipLibCheck": true,
     "lib": [
       "es2017", "dom"
-    ]
+	],
+	"paths": {
+		"fluent/*": ["fluent/*"]
+	}
   },
   "include": [
     "./src/**/*.ts",
