--- a/package.json
+++ b/package.json
@@ -16,22 +16,26 @@
     "aurelia-polyfills": "^1.3.0",
     "aurelia-templating": "^1.8.2",
     "bluebird": "^3.5.1",
+    "quill": "^1.3.6",
     "webpack-dev-middleware": "^3.1.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.105",
     "@types/node": "^9.4.7",
+    "@types/quill": "^1.3.9",
     "@types/webpack": "^4.1.1",
     "aspnet-webpack": "^3.0.0",
     "aurelia-cli": "^0.34.0",
     "aurelia-testing": "^1.0.0-beta.4.0.0",
     "aurelia-tools": "^2.0.0",
     "aurelia-webpack-plugin": "^3.0.0-rc.1",
+    "babel-eslint": "^9.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^5.5.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^1.1.11",
     "gulp": "^4.0.0",
