--- a/project.csproj
+++ b/project.csproj
@@ -22,7 +22,7 @@
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec Command="npm install" />
-    <Exec Command="au build --env prod" />
+    <Exec Command=".\node_modules\aurelia-cli\bin\aurelia-cli.js build --env prod" />
     <!-- Include the newly-built files in the publish output -->
     <ItemGroup>
       <DistFiles Include="wwwroot\dist\**" />
