--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aurelia-path": "^1.1.1",
     "aurelia-polyfills": "^1.3.0",
     "aurelia-templating": "^1.8.2",
+    "aurelia-validatejs": "^0.7.0",
+    "aurelia-validation": "^1.2.2",
     "bluebird": "^3.5.1",
     "quill": "^1.3.6",
     "webpack-dev-middleware": "^3.1.3"
