--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "url-loader": "^1.0.1",
     "vinyl-fs": "^3.0.2",
     "webpack": "^4.1.1",
-    "webpack-bundle-analyzer": "latest",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.21.2"
