--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "aurelia-dialog": "^2.0.0-rc.3",
     "aurelia-path": "^1.1.1",
     "aurelia-polyfills": "^1.3.0",
-    "aurelia-templating": "^1.8.2",
+    "aurelia-templating": "^1.9.0",
     "aurelia-validatejs": "^0.7.0",
-    "aurelia-validation": "^1.2.2",
+    "aurelia-validation": "^1.2.3",
     "bluebird": "^3.5.1",
     "quill": "^1.3.6",
-    "webpack-dev-middleware": "^3.1.3"
+    "webpack-dev-middleware": "^3.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.105",
@@ -28,10 +28,10 @@
     "@types/quill": "^1.3.9",
     "@types/webpack": "^4.1.1",
     "aspnet-webpack": "^3.0.0",
-    "aurelia-cli": "^0.34.0",
-    "aurelia-testing": "^1.0.0-beta.4.0.0",
+    "aurelia-cli": "^0.35.1",
+    "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
-    "aurelia-webpack-plugin": "^3.0.0-rc.1",
+    "aurelia-webpack-plugin": "^3.0.0",
     "babel-eslint": "^9.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
