--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "aurelia-validatejs": "^0.7.0",
     "aurelia-validation": "^1.2.3",
     "bluebird": "^3.5.1",
+    "leaflet": "^1.3.4",
+    "leaflet-providers": "^1.4.0",
     "quill": "^1.3.6",
     "webpack-dev-middleware": "^3.4.0"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.4",
+    "@types/leaflet": "^1.2.11",
+    "@types/leaflet-providers": "^1.1.2",
     "@types/lodash": "^4.14.105",
     "@types/node": "^9.4.7",
     "@types/quill": "^1.3.9",
