--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	},
+	"Email": {
+		"SmtpServer": "smtp.live.com",
+		"SmtpPort": 587
+	}
 }
