--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aurelia-bootstrapper": "^2.2.0",
     "aurelia-dependency-injection": "^1.4.1",
     "aurelia-dialog": "^2.0.0-rc.3",
+    "aurelia-fetch-client": "^1.6.0",
     "aurelia-path": "^1.1.1",
     "aurelia-polyfills": "^1.3.0",
     "aurelia-templating": "^1.9.0",
