--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "leaflet": "^1.3.4",
     "leaflet-providers": "^1.4.0",
     "quill": "^1.3.6",
-    "webpack-dev-middleware": "^3.4.0"
+    "webpack-dev-middleware": "^3.4.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.4",
