--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "@fortawesome/pro-light-svg-icons": "^5.2.0",
-    "applicationinsights": "^1.0.4",
+    "applicationinsights-js": "^1.0.20",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
     "aurelia-dependency-injection": "^1.4.1",
